--- a/src/app/Components/issue/issue.component.html
+++ b/src/app/Components/issue/issue.component.html
@@ -24,7 +24,7 @@
     </div>
  <div class="col-md-6">
     <h1>Image</h1>
-    <img src="http://localhost:3000/uploads/{{issue.image}}" alt="Image" width="50%" height="200px"  style="object-fit:cover">
+    <img src="http://api.bugissue.tech/uploads/{{issue.image}}" alt="Image" width="50%" height="200px"  style="object-fit:cover">
         </div>
         <div class="col-md-6"><h2>Description</h2>
           <p>{{issue.description}}</p>
